--- a/Areas/Admin/Views/Home/Index.cshtml
+++ b/Areas/Admin/Views/Home/Index.cshtml
@@ -8,5 +8,7 @@
     <li><a href="@Url.Action("Users", "Admin")">Manage Users</a></li>
     <li><a href="@Url.Action("Orders", "Admin")">View Orders</a></li>
     <li><a href="@Url.Action("Index", "AdminCategory")">Manage Categories</a></li>
+    <a href="@Url.Action("Index", "AdminCategory", new { area = "Admin" })">Manage Categories</a>
+
     
 </ul>
