--- a/Areas/Admin/Views/Home/Login.cshtml
+++ b/Areas/Admin/Views/Home/Login.cshtml
@@ -2,7 +2,7 @@
     Layout = "_Layout";
 }
 <h1>Admin Login</h1>
-<form method="post" action="@Url.Action("Login", "Admin")">
+<form method="post" action="@Url.Action("Login", "Home")">
     <div class="form-group">
         <label for="username">Username</label>
         <input type="text" class="form-control" id="username" name="username" required />
