--- a/Areas/Admin/Views/AdminCategory/Delete.cshtml
+++ b/Areas/Admin/Views/AdminCategory/Delete.cshtml
@@ -11,7 +11,7 @@
         <dt class="col-sm-2">Description</dt>
         <dd class="col-sm-10">@Model.Description</dd>
     </dl>
-    <form asp-action="DeleteConfirmed" method="post">
+    <form asp-action="DeleteConfirmed" method="post" asp-area="Admin">
         <input type="hidden" asp-for="CategoryId" />
         <button type="submit" class="btn btn-danger">Delete</button>
         <a href="@Url.Action("Index", "AdminCategory")" class="btn btn-secondary">Cancel</a>
